# Master-Degree

./: Preprocessing-Data.ipynb  Processing-tesseract.ipynb  Untitled.ipynb  change_color.ipynb  character-reg.ipynb  pyproject.toml  requirement.txt
Master-degree/: pyproject.toml
Master-degree/master_degree/: Mnist.ipynb  Pre-Processing.ipynb  character-recognition.ipynb
Master-degree/master_degree/.ipynb_checkpoints/: character-reg-checkpoint.ipynb  thai-character-recognition-checkpoint.ipynb
