[tool.poetry]
name = "master-degree"
version = "0.1.0"
description = ""
authors = ["nkietwee <nawaporn.kiet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
numpy = ">=1.23.0,<2.0.0"
ultralytics = "^8.3.33"
pytesseract = "^0.3.13"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"
tensorflow = "2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
